--- a/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
+++ b/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4           7.3          2015  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "1890"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -745,23 +745,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Steven Soderbergh              13\n",
-       "Clint Eastwood                 12\n",
-       "Ridley Scott                   12\n",
-       "Shawn Levy                     10\n",
-       "Steven Spielberg               10\n",
-       "                               ..\n",
-       "Chris Miller|Raman Hui          1\n",
-       "James Gray                      1\n",
-       "Paul Weiland                    1\n",
-       "Chris Williams|Byron Howard     1\n",
-       "Fyodor Bondarchuk               1\n",
+       "Steven Soderbergh                13\n",
+       "Ridley Scott                     12\n",
+       "Clint Eastwood                   12\n",
+       "Shawn Levy                       10\n",
+       "Steven Spielberg                 10\n",
+       "                                 ..\n",
+       "Floria Sigismondi                 1\n",
+       "Peter Farrelly|Bobby Farrelly     1\n",
+       "Craig Mazin                       1\n",
+       "Elizabeth Banks                   1\n",
+       "Jan de Bont                       1\n",
        "Name: director, Length: 958, dtype: int64"
       ]
      },
@@ -789,23 +789,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ridley Scott         12\n",
-       "Clint Eastwood       10\n",
-       "Steven Soderbergh    10\n",
-       "Steven Spielberg     10\n",
-       "Shawn Levy            9\n",
-       "                     ..\n",
-       "Kimberly Peirce       1\n",
-       "Pat O'Connor          1\n",
-       "Scott Hicks           1\n",
-       "Henry Selick          1\n",
-       "David McNally         1\n",
+       "Ridley Scott                                 12\n",
+       "Steven Spielberg                             10\n",
+       "Steven Soderbergh                            10\n",
+       "Clint Eastwood                               10\n",
+       "Shawn Levy                                    9\n",
+       "                                             ..\n",
+       "Roger Donaldson                               1\n",
+       "Tim Burton|Mike Johnson                       1\n",
+       "Michael Rymer                                 1\n",
+       "Andrew Adamson|Kelly Asbury|Conrad Vernon     1\n",
+       "Kevin Allen                                   1\n",
        "Name: director, Length: 774, dtype: int64"
       ]
      },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1112,18 +1112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "185"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Universal\n"
+     ]
     }
    ],
    "source": [
@@ -1141,9 +1138,8 @@
     "    films_number = data[data.production_companies.str.contains(company, na=False)].original_title.count()\n",
     "    companies_films[company] = films_number\n",
     "\n",
-    "companies_films['Universal']\n",
-    "#print(max(companies_films.items(), key=operator.itemgetter(1))[0])\n",
-    "#answer_ls.append(1)"
+    "print(max(companies_films.items(), key=operator.itemgetter(1))[0])\n",
+    "answer_ls.append(1)"
    ]
   },
   {
@@ -1161,11 +1157,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warner Bros.\n"
+     ]
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "data_raw = data[data.release_year == 2015]\n",
+    "companies_raw = data_raw['production_companies']\n",
+    "companies = []\n",
+    "for line in companies_raw:\n",
+    "    companies_in_line = line.split('|')\n",
+    "    for company in companies_in_line:\n",
+    "        if company not in companies:        \n",
+    "            companies.append(company)\n",
+    "\n",
+    "companies_films = {}\n",
+    "\n",
+    "for company in companies:\n",
+    "    films_number = data[data.production_companies.str.contains(company, na=False)].original_title.count()\n",
+    "    companies_films[company] = films_number\n",
+    "\n",
+    "print(max(companies_films.items(), key=operator.itemgetter(1))[0])\n",
+    "answer_ls.append(4)"
    ]
   },
   {
@@ -1183,11 +1203,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Universal\n"
+     ]
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "data_raw = data[(data.genres.str.contains('Comedy', na=False))]\n",
+    "companies_raw = data_raw['production_companies']\n",
+    "companies = []\n",
+    "for line in companies_raw:\n",
+    "    companies_in_line = line.split('|')\n",
+    "    for company in companies_in_line:\n",
+    "        if company not in companies:        \n",
+    "            companies.append(company)\n",
+    "\n",
+    "companies_income = {}            \n",
+    "for company in companies:\n",
+    "    data_company = data_raw[data_raw.production_companies.str.contains(company, na=False)]\n",
+    "    company_income = data_company['net_income'].sum()\n",
+    "    companies_income[company] = company_income\n",
+    "\n",
+    "print(max(companies_income.items(), key=operator.itemgetter(1))[0])\n",
+    "\n",
+    "answer_ls.append(2)"
    ]
   },
   {
@@ -1205,11 +1250,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columbia Pictures\n"
+     ]
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "data_raw = data[data.release_year == 2012]\n",
+    "companies_raw = data_raw['production_companies']\n",
+    "companies = []\n",
+    "for line in companies_raw:\n",
+    "    companies_in_line = line.split('|')\n",
+    "    for company in companies_in_line:\n",
+    "        if company not in companies:        \n",
+    "            companies.append(company)\n",
+    "\n",
+    "companies_income = {}            \n",
+    "for company in companies:\n",
+    "    data_company = data_raw[data_raw.production_companies.str.contains(company, na=False)]\n",
+    "    company_income = data_company['net_income'].sum()\n",
+    "    companies_income[company] = company_income\n",
+    "\n",
+    "print(max(companies_income.items(), key=operator.itemgetter(1))[0])\n",
+    "answer_ls.append(3)"
    ]
   },
   {
@@ -1228,10 +1297,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "926    K-19: The Widowmaker\n",
+       "Name: original_title, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "data_raw = data[(data.production_companies.str.contains('Paramount Pictures', na=False))]\n",
+    "display(data_raw.loc[data_raw.net_income == data_raw.net_income.min()].original_title)\n",
+    "            \n",
     "answer_ls.append(1)"
    ]
   },
@@ -1250,11 +1333,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "release_year\n",
+       "2015    18668572378\n",
+       "2014    16397812953\n",
+       "2012    16077001687\n",
+       "2013    15243179791\n",
+       "2011    14730241341\n",
+       "2009    13423744372\n",
+       "2010    13117292530\n",
+       "2008    11663881990\n",
+       "2007    11565911801\n",
+       "2004     9634180720\n",
+       "2003     9228823312\n",
+       "2002     9002361487\n",
+       "2005     8981925558\n",
+       "2006     8691077320\n",
+       "2001     7950614865\n",
+       "2000     6101399805\n",
+       "Name: net_income, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "display(data.groupby(['release_year'])['net_income'].sum().sort_values(ascending=False))\n",
+    "            \n",
+    "answer_ls.append(5)"
    ]
   },
   {
@@ -1272,10 +1384,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "release_year\n",
+       "2014    2295464519\n",
+       "2007    2201675217\n",
+       "2008    2134595031\n",
+       "2010    1974712985\n",
+       "2011    1871393682\n",
+       "2003    1855493377\n",
+       "2009    1822454136\n",
+       "2013    1636453400\n",
+       "2004    1631933725\n",
+       "2005    1551980298\n",
+       "2001    1343545668\n",
+       "2012    1258020056\n",
+       "2002    1022709901\n",
+       "2015     870368348\n",
+       "2006     620170743\n",
+       "2000     452631386\n",
+       "Name: net_income, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "data_raw = data[(data.production_companies.str.contains('Warner Bros', na=False))]\n",
+    "display(data_raw.groupby(['release_year'])['net_income'].sum().sort_values(ascending=False))\n",
     "answer_ls.append(1)"
    ]
   },
@@ -1294,11 +1435,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9     227\n",
+       "12    191\n",
+       "10    186\n",
+       "8     161\n",
+       "3     156\n",
+       "4     149\n",
+       "6     147\n",
+       "11    146\n",
+       "7     142\n",
+       "5     140\n",
+       "2     135\n",
+       "1     110\n",
+       "Name: release_month, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "def get_month(date):\n",
+    "    m = date.split('/')[0]\n",
+    "    return int(m)\n",
+    "\n",
+    "data['release_month'] = data.release_date.apply(get_month)\n",
+    "display(data['release_month'].value_counts())\n",
+    "\n",
+    "answer_ls.append(4)"
    ]
   },
   {
@@ -1316,11 +1486,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "450\n"
+     ]
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "june = data[data.release_month == 6].original_title.count()\n",
+    "july = data[data.release_month == 7].original_title.count()\n",
+    "august = data[data.release_month == 8].original_title.count()\n",
+    "\n",
+    "print(june + july + august)\n",
+    "answer_ls.append(2)"
    ]
   },
   {
