--- a/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
+++ b/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
@@ -646,6 +646,7 @@
    "metadata": {},
    "source": [
     "11. Какого жанра фильмов больше всего?\n",
+    "\n",
     "Варианты ответов:\n",
     "1. Action\n",
     "2. Adventure\n",
@@ -1486,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1498,11 +1499,9 @@
     }
    ],
    "source": [
-    "june = data[data.release_month == 6].original_title.count()\n",
-    "july = data[data.release_month == 7].original_title.count()\n",
-    "august = data[data.release_month == 8].original_title.count()\n",
+    "data_raw = data.query('release_month in [6, 7, 8]')\n",
+    "print(data_raw.original_title.count())\n",
     "\n",
-    "print(june + july + august)\n",
     "answer_ls.append(2)"
    ]
   },
@@ -1521,11 +1520,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Peter Jackson                     7\n",
+       "Steven Soderbergh                 6\n",
+       "Clint Eastwood                    6\n",
+       "Martin Scorsese                   4\n",
+       "Adam Shankman                     4\n",
+       "                                 ..\n",
+       "Rajkumar Hirani                   1\n",
+       "Bill Condon                       1\n",
+       "John Polson                       1\n",
+       "Lana Wachowski|Lilly Wachowski    1\n",
+       "Kevin Allen                       1\n",
+       "Name: director, Length: 333, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "data_raw = data.query('release_month in [1, 2, 12]')\n",
+    "display(data_raw['director'].value_counts())\n",
+    "\n",
+    "                      \n",
+    "answer_ls.append(5)"
    ]
   },
   {
