--- a/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
+++ b/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 119,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4           7.3          2015  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "1890"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 133,
    "metadata": {
     "scrolled": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
     "#directors_films\n",
     "print(max(directors_films.items(), key=operator.itemgetter(1))[0])\n",
     "\n",
-    "#answer_ls.append(3)"
+    "answer_ls.append(3)"
    ]
   },
   {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1972,16 +1972,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36"
+       "37"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
