--- a/dst/module_3/python_12/missing_values.ipynb
+++ b/dst/module_3/python_12/missing_values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "4  Запись пользователя № - user_954  [2019-01-01 21:31:18  NaN  NaN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4  User_902   Balliaryva@ukr.net        NaN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,11 +190,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    985\n",
+       "True      15\n",
+       "Name: time, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "time = log.time"
+    "time = log.time\n",
+    "time.isna().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   user_id  1000 non-null   object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 7.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "log1 = log.dropna(axis = 1)\n",
+    "log1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 133 entries, 14 to 991\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   user_id  133 non-null    object \n",
+      " 1   time     133 non-null    object \n",
+      " 2   bet      133 non-null    float64\n",
+      " 3   win      133 non-null    float64\n",
+      "dtypes: float64(2), object(2)\n",
+      "memory usage: 5.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "log2 = log.dropna(axis = 0)\n",
+    "log2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   user_id  1000 non-null   object \n",
+      " 1   bet      485 non-null    float64\n",
+      " 2   win      138 non-null    float64\n",
+      "dtypes: float64(2), object(1)\n",
+      "memory usage: 23.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "log3 = pd.concat([log[['user_id', 'time']].dropna(axis=1), log[['bet', 'win']]], axis=1)\n",
+    "log3.info()"
    ]
   },
   {
