--- a/dst/module_3/python_12/user_analysis.ipynb
+++ b/dst/module_3/python_12/user_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,13 +36,47 @@
        "1986.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged.groupby('user_id').net.sum().median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.05"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = merged.groupby('user_id')\n",
+    "\n",
+    "def get_bets(bet):\n",
+    "    i = 0\n",
+    "    if bet.sum()>0:        \n",
+    "        for b in bet:\n",
+    "            if b == 0:\n",
+    "                i+=1\n",
+    "        return i\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "bets=merged.groupby('user_id').bet.apply(get_bets)\n",
+    "bets.mean()\n"
    ]
   },
   {
