--- a/dst/module_3/python_12/city_analysis.ipynb
+++ b/dst/module_3/python_12/city_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "11           Тюмень      4701.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "127.81602335164835"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,6 +182,30 @@
     "#bets.sort_values(by = ['bet'], ascending=False)\n",
     "result = max_bet/min_bet\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log = pd.read_csv(\"log.csv\", header=None)\n",
+    "log.columns= ['user_id', 'time', 'bet', 'win']\n",
+    "log = log[log.user_id != '#error']  \n",
+    "log.user_id = log.user_id.str.split(' - ').apply(lambda x: x[1])\n",
+    "log['bet'].fillna(0, inplace=True)\n",
+    "log['win'].fillna(0, inplace=True)\n",
+    "log['net'] = log.apply(lambda row: row.win - row.bet, axis=1)\n",
+    "\n",
+    "users = pd.read_csv('users.csv', encoding ='KOI8-R', sep='\\t')\n",
+    "users.columns = ['user_id', 'email', 'geo']\n",
+    "users.user_id = users.user_id.apply(lambda x: x.lower())\n",
+    "\n",
+    "merged = pd.merge(users, log, on='user_id')\n",
+    "\n",
+    "sample2 = .groupby(['geo']).bet.mean().reset_index()\n",
+    "sample"
    ]
   }
  ],
@@ -201,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
