--- a/dst/module_3/python_12/merge&groupby.ipynb
+++ b/dst/module_3/python_12/merge&groupby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,14 @@
     "\n",
     "users = pd.read_csv('users.csv', encoding ='KOI8-R', sep='\\t')\n",
     "users.columns = ['user_id', 'email', 'geo']\n",
-    "users.user_id = users.user_id.apply(lambda x: x.lower())  "
+    "users.user_id = users.user_id.apply(lambda x: x.lower())\n",
+    "\n",
+    "log['net'] = log.apply(lambda row: row.win - row.bet, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +33,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 975 entries, 0 to 974\n",
-      "Data columns (total 6 columns):\n",
+      "Data columns (total 7 columns):\n",
       " #   Column   Non-Null Count  Dtype  \n",
       "---  ------   --------------  -----  \n",
       " 0   user_id  975 non-null    object \n",
@@ -40,8 +42,9 @@
       " 3   time     975 non-null    object \n",
       " 4   bet      470 non-null    float64\n",
       " 5   win      132 non-null    float64\n",
-      "dtypes: float64(2), object(4)\n",
-      "memory usage: 53.3+ KB\n"
+      " 6   net      132 non-null    float64\n",
+      "dtypes: float64(3), object(4)\n",
+      "memory usage: 60.9+ KB\n"
      ]
     }
    ],
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -61,13 +64,33 @@
        "5951.75"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged.groupby('user_id').win.median().median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5739.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged.groupby('user_id').net.sum().median()"
    ]
   },
   {
@@ -94,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
