--- a/dst/module_3/python_12/user_analysis.ipynb
+++ b/dst/module_3/python_12/user_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "1986.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "5.05"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,16 +75,51 @@
     "        return 0\n",
     "\n",
     "\n",
-    "bets=merged.groupby('user_id').bet.apply(get_bets)\n",
+    "bets=data.bet.apply(get_bets)\n",
     "bets.mean()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "user_1000     133.333333\n",
+       "user_900      271.428571\n",
+       "user_901       75.000000\n",
+       "user_902      212.500000\n",
+       "user_903     1506.000000\n",
+       "                ...     \n",
+       "user_995     1285.400000\n",
+       "user_996      200.000000\n",
+       "user_997      200.000000\n",
+       "user_998     1414.000000\n",
+       "user_999      200.000000\n",
+       "Name: bet, Length: 100, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#data = data.sort_values(by = ['time'], ascending=False)\n",
+    "#def get_days(data):    \n",
+    "#    if data.bet.sum()>0:\n",
+    "#        if data.bet[0] == 0:\n",
+    "#            return data['time']\n",
+    "    \n",
+    "        \n",
+    "#days=data.apply(get_days)\n",
+    "#days\n",
+    "\n",
+    "data.bet.mean()"
+   ]
   }
  ],
  "metadata": {
@@ -103,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
