--- a/dst/module_3/python_12/to_datetime.ipynb
+++ b/dst/module_3/python_12/to_datetime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "4  Запись пользователя № - user_954  [2019-01-01 21:31:18  NaN  NaN"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4  Запись пользователя № - user_954  2019-01-01 21:31:18  NaN  NaN"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "'2019-04-20'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,11 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\dev\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:5303: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[name] = value\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -267,15 +279,99 @@
        "Name: time, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log = log.dropna()  \n",
-    "log.time = log.time.apply(lambda x: x.minute)\n",
-    "log['time'].head(30)"
+    "log1 = log.dropna()  \n",
+    "log1.time = log1.time.apply(lambda x: x.minute)\n",
+    "log1['time'].head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14     1\n",
+       "29     1\n",
+       "151    1\n",
+       "189    1\n",
+       "205    1\n",
+       "214    1\n",
+       "230    1\n",
+       "232    1\n",
+       "265    1\n",
+       "294    2\n",
+       "348    2\n",
+       "360    2\n",
+       "367    2\n",
+       "376    2\n",
+       "384    2\n",
+       "393    2\n",
+       "461    2\n",
+       "469    2\n",
+       "509    2\n",
+       "517    2\n",
+       "522    2\n",
+       "523    2\n",
+       "526    2\n",
+       "545    2\n",
+       "549    2\n",
+       "557    3\n",
+       "568    3\n",
+       "574    3\n",
+       "581    3\n",
+       "584    3\n",
+       "Name: time, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log2 = log.dropna()  \n",
+    "log2.time = log2['time'].apply(lambda x: x.month)\n",
+    "log2['time'].head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14     1\n",
+       "29     1\n",
+       "151    1\n",
+       "189    1\n",
+       "205    1\n",
+       "      ..\n",
+       "967    4\n",
+       "971    4\n",
+       "972    4\n",
+       "976    4\n",
+       "991    4\n",
+       "Name: time, Length: 133, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log3 = log.dropna()  \n",
+    "log3.time.dt.month"
    ]
   },
   {
