--- a/dst/module_3/MATH&STAT-1/matrix_multiplication_and_transposition.ipynb
+++ b/dst/module_3/MATH&STAT-1/matrix_multiplication_and_transposition.ipynb
@@ -17,10 +17,9 @@
     {
      "data": {
       "text/plain": [
-       "matrix([[ 1, -5,  3],\n",
-       "        [ 2,  2,  1],\n",
-       "        [ 0,  3,  1],\n",
-       "        [ 2,  4, 12]])"
+       "matrix([[ 1,  1],\n",
+       "        [ 1,  2],\n",
+       "        [ 0, -1]])"
       ]
      },
      "execution_count": 2,
@@ -29,8 +28,8 @@
     }
    ],
    "source": [
-    "A = np.matrix([[1,-5,3],[2,2,1],[0,3,1],[2,4,12]])\n",
-    "A"
+    "X = np.matrix([[1,1],[1,2],[0,-1]])\n",
+    "X"
    ]
   },
   {
@@ -41,7 +40,8 @@
     {
      "data": {
       "text/plain": [
-       "(4, 3)"
+       "matrix([[ 1,  1,  0],\n",
+       "        [ 1,  2, -1]])"
       ]
      },
      "execution_count": 3,
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "A.shape"
+    "X.T"
    ]
   },
   {
@@ -59,88 +59,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_23= 1 A_32= 3 A_33= 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('A_23=',A[1,2], 'A_32=',A[2,1], 'A_33=',A[2,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.matrix(\"1,-5;2,2;0,3\")\n",
-    "v = np.array([7,5,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "matrix([[ 1, -5],\n",
-       "        [ 2,  2],\n",
-       "        [ 0,  3]])"
+       "matrix([[ 2,  3, -1],\n",
+       "        [ 3,  5, -2],\n",
+       "        [-1, -2,  1]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[ 1,  2,  0],\n",
-       "        [-5,  2,  3]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([7, 5, 1])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "v"
+    "X*X.T"
    ]
   },
   {
@@ -151,7 +83,9 @@
     {
      "data": {
       "text/plain": [
-       "array([7, 5, 1])"
+       "matrix([[ 1,  1],\n",
+       "        [ 2, -1],\n",
+       "        [ 1,  2]])"
       ]
      },
      "execution_count": 9,
@@ -160,31 +94,30 @@
     }
    ],
    "source": [
-    "v.T"
+    "A = np.matrix([[1,1],[2,-1],[1,2]])\n",
+    "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "matrix([[ 7,  2],\n",
-       "        [ 0, 12]])"
+       "matrix([[2, 1, 3],\n",
+       "        [1, 5, 0],\n",
+       "        [3, 0, 5]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = np.matrix(\"1,1;5,7\")\n",
-    "B = np.matrix(\"6,1;-5,5\")\n",
-    "C = A + B\n",
-    "C"
+    "A * A.T"
    ]
   },
   {
